--- a/src/content/posts/core-d20/about-history-of-challenge.mdx
+++ b/src/content/posts/core-d20/about-history-of-challenge.mdx
@@ -10,7 +10,7 @@ tags:
 author: Mike Shea
 ---
 
-В первом полном издании игры Dungeons & Dragons (версия, обычно известная как first edition или 1e для тех, кто ее помнит, хотя на самом деле это была вторая полная версия игры) древний красный дракон - величайший из смертных врагов - имел 88 хитов и класс защиты-1.
+В первом полном издании игры Dungeons & Dragons (версия, обычно известная как first edition или 1e для тех, кто ее помнит, хотя на самом деле это была вторая полная версия игры) древний красный дракон - величайший из смертных врагов - имел 88 хитов и класс защиты \-1.
 
 Это не опечатки.
 
@@ -18,11 +18,9 @@ author: Mike Shea
 
 ## ХОД СОБЫТИЙ
 
-В первой редакции Advanced Dungeons & Dragons не было такого понятия, как вызов или ПО. (Не было формул или контрольных списков для создания сбалансированных столкновений. На самом деле, было очень мало общего мнения о том, что такое сбалансированная встреча, в том смысле, в котором мы говорим об этом в современной версии игры. Вместо этого монстры были разделены на десять "уровневых" групп в соответствии с их опытом XP (количество базовых очков опыта, которое получал персонаж, если побеждал монстра в бою). В ходе расчета XP учитывались Кости Хитов монстра (которые, в отличие от более поздних изданий, были равны d8 для всех типов и размеров существ), хиты и особые характеристики.
+В первой редакции Advanced Dungeons & Dragons не было такого понятия, как вызов или ПО. Не было формул или контрольных списков для создания сбалансированных столкновений. На самом деле, было очень мало общего мнения о том, что такое сбалансированная встреча, в том смысле, в котором мы говорим об этом в современной версии игры. Вместо этого монстры были разделены на десять "уровневых" групп в соответствии с их опытом XP (количество базовых очков опыта, которое получал персонаж, если побеждал монстра в бою). В ходе расчета XP учитывались Кости Хитов монстра (которые, в отличие от более поздних изданий, были равны d8 для всех типов и размеров существ), хиты и особые характеристики.
 
-Кости Хитов монстров также использовались для сравнения относительной угрозы группы монстров и сражающейся с ними партии, путем деления общего количества Костей Хитов на общее количество уровней персонажей.
-
-но при этом монстры получали дополнительные виртуальные Кости Хитов за бонусные хиты и специальные атаки.
+Кости Хитов монстров также использовались для сравнения относительной угрозы группы монстров и сражающейся с ними партии, путем деления общего количества Костей Хитов на общее количество уровней персонажей, но при этом монстры получали дополнительные виртуальные Кости Хитов за бонусные хиты и специальные атаки.
 
 Другими словами, определение вызова в 1e был сложным процессом. Но даже более того, вызов в 1e никогда не был задуман как процесс выбора монстров для создания сбалансированных столкновений. Десять таблиц, на которые были разделены существа, использовались для комплектации многоуровневых подземелий игры 1e по умолчанию, с увеличенной глубиной, равной увеличенной угрозе, где уровень подземелья под землей должен был указывать на уровень персонажей, которые сочтут его уровень угрозы управляемым.
 
@@ -34,15 +32,15 @@ author: Mike Shea
 
 Таким образом, в столкновениях первого и второго изданий часто требовались вещи, которые современные ГМы, привыкшие к созданию сбалансированных столкновений определенного уровня сложности (легкие, средние, трудные и смертельные), редко учитывают. Таким образом, старые ГМы становились искусными в подборе монстров к повествованию, а также в обеспечении того, чтобы боевые столкновения могли разрешаться не только в пользу персонажей.
 
-В начале второго издания древний красный дракон получил апгрейд до красного великого вирма и в среднем имел 103 хита с повышенным КЗ -11 (эквивалентно КЗ 31 в текущей игре).
+В начале второго издания древний красный дракон получил апгрейд до красного великого вирма и в среднем имел 103 хита с повышенным КЗ \-11 (эквивалентно КЗ 31 в текущей игре).
 
 С 2000 года третья редакция D&D (больше не "Продвинутая", для большинства - 3e, разделенная на 3.0e и 3.5e) внесла значительные изменения в монстров и столкновения - и тем самым заложила основу для рекомендаций по созданию столкновений, отражение которых можно увидеть в нынешней игре.
 
-В целом монстры в 3e стали жестче, чем в 1e и 2e, поскольку в 3e была принята идея о том, что у монстров есть показатели характеристик (чего не было в предыдущих редакциях), и они стали использовать модификаторы силы и телосложения для увеличения урона и хитов. Персонажи в игре 3e также стали жестче и многофункциональнее, но в бою эта редакция осталась близка к модели 1e/2e: средний боец по-прежнему наносит базовый урон 1к8 + 4 длинным мечом, а заклинание огненного шара наносит врагам урон 1к6 за уровень кастера.
+В целом монстры в 3e стали жестче, чем в 1e и 2e, поскольку в 3e была принята идея о том, что у монстров есть показатели характеристик (чего не было в предыдущих редакциях), и они стали использовать модификаторы силы и телосложения для увеличения урона и хитов. Персонажи в игре 3e также стали жестче и многофункциональнее, но в бою эта редакция осталась близка к модели 1e/2e: средний боец по-прежнему наносит базовый урон 1к8 + 4 длинным мечом, а заклинание огненного шара наносит врагам урон 1к6 за уровень заклинателя.
 
 ГМы третьей редакции впервые стали использовать показатель опасности как концепцию и игровой термин, поскольку каждому противнику в игре присваивалось фиксированное числовое ПО, основанное на защите, атаке, наносимом уроне, особых свойствах и других факторах. Примечательно, что в основных правилах 3e не было простого способа рассчитать показатель опасности монстра, созданного ГМом, вместо этого описывался сложный процесс сравнения его статистики с другими монстрами данного ПО.
 
-показатель опасности использовался для определения опыта персонажей, победивших монстра с определенным ПО, причем награда корректировалась в зависимости от того, как сопоставлялись уровень персонажа и ПО монстра. Но что еще более важно, в 3e появилось множество формул и таблиц, позволяющих определить, как создать теоретически сбалансированную встречу для персонажей определенного уровня, используя базовую идею о том, что один монстр с ПО X является подходящим испытанием для четырех персонажей уровня X. В то же время третья редакция формализовала смысл понятия "сбалансированный", разбив встречи на различные ранги сложности, от легких до невозможных.
+Показатель опасности использовался для определения опыта персонажей, победивших монстра с определенным ПО, причем награда корректировалась в зависимости от того, как сопоставлялись уровень персонажа и ПО монстра. Но что еще более важно, в 3e появилось множество формул и таблиц, позволяющих определить, как создать теоретически сбалансированную встречу для персонажей определенного уровня, используя базовую идею о том, что один монстр с ПО X является подходящим испытанием для четырех персонажей уровня X. В то же время третья редакция формализовала смысл понятия "сбалансированный", разбив встречи на различные ранги сложности, от легких до невозможных.
 
 В 3.0e и 3.5e вершина красного дракона осталась красным великим вирмом и получила впечатляющее обновление - 660 хитов и класс защиты 41.
 
