--- a/src/content/posts/core-d20/about-tension-dice.mdx
+++ b/src/content/posts/core-d20/about-tension-dice.mdx
@@ -38,7 +38,7 @@ tags:
 
 3\. Бросьте все Кости, которые в момент броска находились в чаше, Такой бросок инициируется определёнными условиями
 
-Условия совершения бросков Костей Напряженности
+### Условия совершения бросков Костей Напряженности
 
 1\. В чаше не может быть больше шести Костей. После того, как Мастер добавите шестую кость в чашу, он должен сразу их бросить
 
@@ -52,7 +52,7 @@ tags:
 
 Ключ к этой механике - выяснить, что это за триггер и какие возникают осложнения.
 
-## Вариантные правила Костей Напряженности
+## Опциональные правила Костей Напряженности
 
 Эта система настолько разнообразна, и с ней можно делать так много всего. Вот несколько идей, которые помогут вам начать работу:
 
