--- a/src/content/posts/core-d20/about-weapon-mastery.mdx
+++ b/src/content/posts/core-d20/about-weapon-mastery.mdx
@@ -200,7 +200,7 @@ author: Melestrua
 
 Маневры разделены на традиции, и их так много, что я не буду пытаться описать каждую из них - вы можете получить представление по названиям или прочитать соответствующий раздел A5ESRD:
 
-**Маневры Адамантовых гор **- это стойкость, могущество и сила: Перевести дух (1-я, 2 пункта), Рассечение (1-я, 2 пункта), Тяжелая стойка (1-я), Наклониться к ней (1-я, 2 пункта), Реактивный нокдаун (2-я), Отмахнуться от нее (2-я, 2 пункта), Защитное поле (2-я), Battering Strike (3rd), Сокрушающий удар (3rd, 2pts), Unbreakable (3rd, 3pts), Stand Tall Stance (4th), Unstoppable (4th, 3pts), Wild Swing (4th), Unyielding (5th, 3pts), World shaking Strike (5th, 3pts)
+Маневры **Адамантовых гор** - это стойкость, могущество и сила: Перевести дух (1-я, 2 пункта), Рассечение (1-я, 2 пункта), Тяжелая стойка (1-я), Наклониться к ней (1-я, 2 пункта), Реактивный нокдаун (2-я), Отмахнуться от нее (2-я, 2 пункта), Защитное поле (2-я), Battering Strike (3rd), Сокрушающий удар (3rd, 2pts), Unbreakable (3rd, 3pts), Stand Tall Stance (4th), Unstoppable (4th, 3pts), Wild Swing (4th), Unyielding (5th, 3pts), World shaking Strike (5th, 3pts)
 
 Маневры **"Кусачего Зефира"** относятся к бою на дистанции: Огонь на укрытие (1-я), Дуплет (1-я), Фаршот (1-я), Выстрел в упор (1-я), Контрвыстрел (2-я), Быстрый бросок (2-я, 2пт), Трикшот (2-я), Выстрел вслепую (3-я), Ракетный залп (3-я, 2пт), Рикошет (3, 2пт), Нырок в Укрытие (4, 2пт), Heartseeker (4, 2пт), Mundane Missile Stance (4, 2пт), Hear the Wind (5, 3пт), Horizon Shot (5, 3пт)
 
@@ -230,9 +230,9 @@ author: Melestrua
 
 Концепция мастерства владения оружием не нова - она была в коробочном наборе BECMI Masters Boxed set (опубликованном в 1985 году), а значит, и в Циклопедии правил. В чем-то она похожа на версию OneD&D, в чем-то - на Level Up A5E. Но у нее есть и особые аспекты, которые здесь не отражены, в частности, несколько уровней мастерства с улучшением атаки и урона.
 
-Мастерство делится на пять уровней: **Базовый**, **Умелый**, **Эксперт**, **Мастер** и **Великий Мастер**. Персонажи начинают с базового мастерства владения двумя видами оружия (или до 4 для бойцов) и могут получить дополнительное мастерство на уровнях 3, 6, 9, 11, 15, 23, 30 и 36, а бойцы также получают мастерство на уровнях 19, 27 и 33.
+Мастерство делится на пять уровней: **Базовый**, **Умелый**, **Эксперт**, **Мастер** и **Великий Мастер**. Персонажи начинают с базового мастерства владения двумя видами оружия (или 4 для бойцов) и могут получить дополнительное мастерство на уровнях 3, 6, 9, 11, 15, 23, 30 и 36, а бойцы также получают мастерство на уровнях 19, 27 и 33.
 
-Обратите внимание, что в BECMI все уровни доходят до 36-го (для людей); в общем случае вы можете разделить уровень на два, чтобы получить примерно эквивалентный уровень 5e, так что 23-й уровень BECMI примерно эквивалентен 12-му уровню 5e.
+*Обратите внимание, что в BECMI все уровни доходят до 36-го (для людей); в общем случае вы можете разделить уровень на два, чтобы получить примерно эквивалентный уровень 5e, так что 23-й уровень BECMI примерно эквивалентен 12-му уровню 5e.*
 
 **Необученный:** Персонажи/существа, не владеющие оружием, наносят только половину урона, а дальнобойное оружие имеет -1 к попаданию.
 
@@ -250,11 +250,11 @@ author: Melestrua
 
 На страницах 20-21 приведены подробные таблицы для каждого оружия с указанием урона на каждом уровне, а также особых свойств, доступных на каждом уровне мастерства. Некоторые виды оружия также дают повышение класса защиты против определенного количества противников (обычно повышается с уровнем мастерства). На более высоких уровнях мастерства некоторые виды ручного оружия можно метать.
 
-Оружие может обладать особыми свойствами:
+### Оружие может обладать особыми свойствами:
 
-**Ломать:** щитовое оружие имеет шанс (1-5 на d10), что лезвие отломится, если владелец или атакующий выпадет точно правильное число для удара.
+**Ломающее:** щитовое оружие имеет шанс (1-5 на к10), что лезвие отломится, если владелец или атакующий выкинет точно такое же число для удара.
 
-**Атака с разбега:** двойной урон при успешном поражении цели с расстояния 20 ярдов и более
+**Атака с разбега:** двойной урон при успешном поражении цели с расстояния 20 ярдов (60 футов) и более
 
 **Смерть:** мгновенно снижается до 0 хп (в те времена не существовало спасбросков от смерти...)
 
@@ -272,8 +272,9 @@ author: Melestrua
 
 **Воспламенение:** при попадании в легковоспламеняющееся вещество вероятность возгорания составляет 5 % на пункт урона.
 
-**Нокаут:** жертва теряет сознание на 1d100 (!) раундов
-No Off-hand Penalty: нет штрафа за бой двумя оружиями
+**Нокаут:** жертва теряет сознание на 1к100 (!) раундов
+
+**No Off-hand Penalty:** нет штрафа за бой двумя оружиями
 
 **Паралич:** существо парализовано на к6 ходов (10 минут); оно находится в сознании, но не может двигаться, атаковать, говорить или произносить заклинания
 
@@ -281,15 +282,15 @@ No Off-hand Penalty: нет штрафа за бой двумя оружиями
 
 **Вторая атака:** вторая атака щитовым оружием (без штрафа) наряду с атакой одноручным оружием
 
-**Подготовка против атаки с разбега:** при попадании в противника, который в этом раунде перемещается на 20 ярдов и более, оружие наносит двойной урон
+**Подготовка против атаки с разбега:** при попадании в противника, который в этом раунде перемещается на 20 ярдов (60 футов) и более, оружие наносит двойной урон
 
-**Коса:** трезубец можно скрутить так, что он застрянет на д4+4 раунда, нанося к6 очков урона за раунд
+**Коса:** трезубец можно скрутить так, что он застрянет на к4+4 раунда, нанося к6 очков урона за раунд
 
 **Замедление:** жертва может двигаться и атаковать в два раза медленнее обычного и не может произносить заклинания
 
-**Удушение:** при выпадении натурального числа жертва должна спастись против луча смерти или будет парализована и умрет через к6+2 раунда, если ее не спасут. Если жертва спасется, ее все равно парализует на 2d6 раундов.
+**Удушение:** при выпадении натурального числа жертва должна спастись против луча смерти или будет парализована и умрет через к6+2 раунда, если ее не спасут. Если жертва спасется, ее все равно парализует на 2к6 раундов.
 
-**Оглушение** (требуется жертва того же размера или меньше): жертва должна сделать спасбросок против луча смерти или быть ошеломлена: передвигается на 1/3 скорости, не может атаковать или произносить заклинания, имеет штраф к КЗ в 2 очка и штраф к спасброску в 2 очка. Каждый раунд делайте спасбросок против луча смерти, чтобы попытаться восстановиться.
+**Оглушение** (требуется жертва того же размера или меньше): жертва должна сделать спасбросок против луча смерти или быть ошеломлена: передвигается на 1/3 скорости, не может атаковать или произносить заклинания, имеет штраф к КЗ в \-2 очка и штраф к спасброскам в \-2 очка. Каждый раунд делайте спасбросок против луча смерти, чтобы попытаться восстановиться.
 
 Пример оружия:
 
@@ -305,12 +306,13 @@ No Off-hand Penalty: нет штрафа за бой двумя оружиями
 
 **Кинжал** наносит 1к4 урона при базовом мастерстве, к6 при искусном, 2к4 при экспертном, 3к4 против нападающих рукопашников и 2к4+2 против нападающих монстров при мастере, и 4к4 против нападающих рукопашников и 3к4+1 против нападающих монстров при гранд-мастере. Дистанция короткой/средней/длинной атаки составляет 10/20/30 у базового уровня, 15/25/35 у умелого, 20/30/45 у эксперта, 25/35/50 у мастера и 30/50/60 у гранд-мастера. На умелом уровне дает улучшение -1 к КЗ против одного атакующего, -2АС/2 у эксперта и мастера и -3АС/3 у гранд-мастера, а также наносит двойной урон при броске 20 при умелом уровне, 19-20 у эксперта, 18-20 у мастера и 17-20 у гранд-мастера.
 
-**Обучение:** Получение уровня мастерства владения оружием
+## Обучение: Получение уровня мастерства владения оружием
+
 Получение уровня не происходит автоматически: персонаж должен тренироваться с кем-то, кто владеет этим оружием хотя бы на равных, и это обучение может не увенчаться успехом. Кроме того, это требует времени и денег.
 
 Получение базового мастерства с новым оружием занимает 1 неделю и стоит 100 зм/неделю.
 
-Переход от базового к опытному мастерству владения оружием занимает 2 недели и стоит 250 гп/неделю
+Переход от базового к опытному мастерству владения оружием занимает 2 недели и стоит 250 зм/неделю
 
 Повышение мастерства владения оружием от умелого до экспертного занимает 4 недели и стоит 500 зм/неделю
 
@@ -318,13 +320,24 @@ No Off-hand Penalty: нет штрафа за бой двумя оружиями
 
 Продвижение от мастера до гранд-мастера владения оружием занимает 12 недель при 1000 зм/неделю.
 
+**Продвижение во владении оружием в зависимости от навыка тренера**
+
+| Прогрессия ученика\Навык тренера | Базовый | Умелый | Эксперт | Мастер | Гранд-мастер |
+| :------------------------------: | :-----: | :----: | :-----: | :----: | :----------: |
+|      Отсутствует => Базовый      |   60%   |  80%   |   95%   |  99%   |     99%      |
+|        Базовый => Умелый         |   1%    |  50%   |   70%   |  90%   |     95%      |
+|        Умелый => Эксперт         |    -    |   1%   |   40%   |  60%   |     80%      |
+|        Эксперт => Мастер         |    -    |   -    |   1%    |  30%   |     50%      |
+|      Мастер => Гранд-мастер      |    -    |   -    |    -    |   1%   |     20%      |
+
+
 Шанс успеха начинается с 1%, если тренер имеет тот же уровень мастерства, что и ученик, и увеличивается в зависимости от уровня тренера:
 
 Получить базовый навык владения новым оружием можно с вероятностью 60%, если тренер имеет базовый навык, 80%, если умелый, 95%, если эксперт, и 99%, если мастер или гранд-мастер.
 
 Неквалифицированный тренер не может добиться успеха.
 
-Продвижение от базового мастерства к мастерскому имеет шанс 1%, если тренер имеет базовый навык, 50%, если умелый, 70%, если эксперт, 90%, если мастер, и 95%, если гранд-мастер.
+Продвижение от базового мастерства к умелому имеет шанс 1%, если тренер имеет базовый навык, 50%, если умелый, 70%, если эксперт, 90%, если мастер, и 95%, если гранд-мастер.
 
 При переходе от мастерства "Умелый" к мастерству "Эксперт" вероятность успеха составляет 1%, если тренер обладает навыком "Умелый", 40% - если "Эксперт", 60% - если "Мастер" и 80% - если "Гранд-мастер".
 
@@ -338,7 +351,7 @@ No Off-hand Penalty: нет штрафа за бой двумя оружиями
 
 ## Мысли и выводы
 
-Мне нравятся некоторые аспекты большинства из этих вариантов, но ни один из них не дает мне полного укрытия.
+Мне нравятся некоторые аспекты большинства из этих вариантов, но ни один из них не дает мне полного покрытия.
 
 Мне нравится, что мастерство владения оружием - это то, что можно тренировать и улучшать, предоставляя персонажам-бойцам возможность выбирать улучшения. Также логично, что это доступно всем боевым персонажам, хотя скорость развития наиболее быстрая для бойцов и более медленная для других классов.
 
