--- a/src/content/posts/core-d20/acrobat-rogue-archetype.mdx
+++ b/src/content/posts/core-d20/acrobat-rogue-archetype.mdx
@@ -18,7 +18,7 @@ tags:
 
 ## Боец с палкой
 
-Начиная с 3-го уровня, когда Вы держите в руках посох, он приобретает свойство фехтовальное. Кроме того, каждый раз, когда Вы используете свою способность "Скрытая атака" с посохомо, Вы можете выбрать нанесение половины обычного урона от "Скрытой атаки" и вместо этого выполнить маневр.
+Начиная с 3-го уровня, когда Вы держите в руках посох, он приобретает свойство фехтовальное. Кроме того, каждый раз, когда Вы используете свою способность "Скрытая атака" с посохом, Вы можете выбрать нанесение половины обычного урона от "Скрытой атаки" и вместо этого выполнить маневр.
 
 КС спасброска маневра = 8 + Ваш бонус владения + Ваш модификатор ловкости.
 
