--- a/src/content/posts/core-d20/background-guard.mdx
+++ b/src/content/posts/core-d20/background-guard.mdx
@@ -22,16 +22,16 @@ author: Kobold Press
 
 ### ПРОФЕССИОНАЛЬНАЯ КОМПЕТЕНЦИЯ
 
-Каждый человек или учреждение, нанимающее охрану, имеет свой собственный набор уникальных потребностей и обязанностей. Будучи охранником, вы выполняли одну из этих уникальных ролей. Выберите специализацию или бросьте d6 и обратитесь к таблице ниже, чтобы определить вашу специализацию охранника.
+Каждый человек или учреждение, нанимающее охрану, имеет свой собственный набор уникальных потребностей и обязанностей. Будучи охранником, вы выполняли одну из этих уникальных ролей. Выберите специализацию или бросьте к6 и обратитесь к таблице ниже, чтобы определить вашу специализацию охранника.
 
-### К6 СПЕЦИАЛИЗАЦИЯ
-
-1. Страж города или ворот
-2. Телохранитель или охранник тюрьмы
-3. Охранник каравана
-4. Часовой при дворце или здании суда
-5. Охранник магазина
-6. Церковная или храмовая стража
+|  К6 | СПЕЦИАЛИЗАЦИЯ                      |
+| --: | ---------------------------------- |
+|   1 | Страж города или ворот             |
+|   2 | Телохранитель или охранник тюрьмы  |
+|   3 | Охранник каравана                  |
+|   4 | Часовой при дворце или здании суда |
+|   5 | Охранник магазина                  |
+|   6 | Церковная или храмовая стража      |
 
 ### ОСОБЕННОСТЬ: ТОВАРИЩИ ПО ОРУЖИЮ
 
@@ -41,42 +41,50 @@ author: Kobold Press
 
 Вы человек, который прекрасно понимает, что такое терпение и скука, ведь охранник всегда ждет, когда что-то произойдет. Чаще всего охранники надеются, что дежурство их пройдет спокойно, так как любое происшествие приносит только проблемы. Жизнь, проведенная в наблюдении и охране, действия в решающий момент, изучение деталей места и поведения - все это помогает сформировать личность бывшего охранника. Некоторые утверждают, что никогда не перестаешь быть охранником, просто меняется то, что ты защищаешь.
 
-### К8 ЧЕРТА ХАРАКТЕРА
+#### К8 ЧЕРТА ХАРАКТЕРА
 
-1. Я видел все пороки общества, и меня уже ничто не удивляет.
-2. Я знаю, куда смотреть, чтобы заметить угрозу, скрывающуюся за углом, во взгляде и даже в кусочке еды или стакане напитка.
-3. Я ненавижу стоять на месте и всегда нахожусь в движении.
-4. Мои друзья знают, что могут положиться на меня в вопросе защиты.
-5. Меня возмущают богатые и влиятельные люди; они думают, что им все сойдет с рук.
-6. Любой обман в моем понимании означает, что вам нельзя доверять.
-7. Задержание преступников показало мне лучшие способы обойти закон.
-8. Я никогда ничего не принимаю за чистую монету.
+|  К8 | ЧЕРТА ХАРАКТЕРА                                                                                                           |
+| --: | ------------------------------------------------------------------------------------------------------------------------- |
+|   1 | Я видел все пороки общества, и меня уже ничто не удивляет.                                                                |
+|   2 | Я знаю, куда смотреть, чтобы заметить угрозу, скрывающуюся за углом, во взгляде и даже в кусочке еды или стакане напитка. |
+|   3 | Я ненавижу стоять на месте и всегда нахожусь в движении.                                                                  |
+|   4 | Мои друзья знают, что могут положиться на меня в вопросе защиты.                                                          |
+|   5 | Меня возмущают богатые и влиятельные люди; они думают, что им все сойдет с рук.                                           |
+|   6 | Любой обман в моем понимании означает, что вам нельзя доверять.                                                           |
+|   7 | Задержание преступников показало мне лучшие способы обойти закон.                                                         |
+|   8 | Я никогда ничего не принимаю за чистую монету.                                                                            |
 
-### К6 ИДЕАЛ
+#### К6 ИДЕАЛ
 
-1. Жадность. Опасность, угрожающая моим спутникам, только приумножает мою славу, когда я защищаю их от нее. (Злой)
-2. Проницательность. Я слежу за всеми, ибо угрозы могут исходить от любого независимо от чина или должности. (Нейтральный)
-3. Долг. Законы города должны соблюдаться, чтобы гарантировать безопасность каждого. (Законный)
-4. Соратники. Я - все, что стоит между моими товарищами и верной гибелью. (Добрый)
-5. Решительность. Чтобы по-настоящему защитить других, нужно иногда нарушать закон. (Хаотичный)
-6. Прагматичность. Я требую плату за защиту или услуги, которые я предоставляю. (Любой)
+|  К6 | ИДЕАЛ                                                                                                                   |
+| --: | ----------------------------------------------------------------------------------------------------------------------- |
+|   1 | **Жадность.** Опасность, угрожающая моим спутникам, только приумножает мою славу, когда я защищаю их от нее. (Злой)         |
+|   2 | **Проницательность.** Я слежу за всеми, ибо угрозы могут исходить от любого независимо от чина или должности. (Нейтральный) |
+|   3 | **Долг.** Законы города должны соблюдаться, чтобы гарантировать безопасность каждого. (Законный)                            |
+|   4 | **Соратники.** Я - все, что стоит между моими товарищами и верной гибелью. (Добрый)                                         |
+|   5 | **Решительность.** Чтобы по-настоящему защитить других, нужно иногда нарушать закон. (Хаотичный)                            |
+|   6 | **Прагматичность.** Я требую плату за защиту или услуги, которые я предоставляю. (Любой)                                    |
 
-### К6 ПРИВЯЗАННОСТЬ
+#### К6 ПРИВЯЗАННОСТЬ
 
-1. Мой подзащитный первостепенен; если вы не можете защитить своего клиента, вы неудачник.
-2. Однажды меня спас один из моих товарищей-стражников. Теперь я всегда прихожу на помощь своим товарищам, независимо от угрозы.
-3. Моя клятва нерушима; я лучше умру первым.
-4. Нет гордости, сравнимой с гордостью за успешно выполненное задание.
-5. Я стою как оплот против тех, кто хочет повредить или разрушить общество, а общество стоит того, чтобы его защищать.
-6. Я знаю, что пока я вместе со своими товарищами, для нас нет ничего невозможного.
+|  К6 | ПРИВЯЗАННОСТЬ                                                                                                                 |
+| --: | ----------------------------------------------------------------------------------------------------------------------------- |
+|   1 | Мой подзащитный первостепенен; если вы не можете защитить своего клиента, вы неудачник.                                       |
+|   2 | Однажды меня спас один из моих товарищей-стражников. Теперь я всегда прихожу на помощь своим товарищам, независимо от угрозы. |
+|   3 | Моя клятва нерушима; я лучше умру первым.                                                                                     |
+|   4 | Нет гордости, сравнимой с гордостью за успешно выполненное задание.                                                           |
+|   5 | Я стою как оплот против тех, кто хочет повредить или разрушить общество, а общество стоит того, чтобы его защищать.           |
+|   6 | Я знаю, что пока я вместе со своими товарищами, для нас нет ничего невозможного.                                              |
 
-### К6 СЛАБОСТЬ
+#### К6 СЛАБОСТЬ
 
-1. Иногда я могу излишне предаваться праздности, но нужно же как-то скоротать время.
-2. Я не могу просто тихо сидеть рядом с кем-то. Мне нужно заполнить тишину разговором, чтобы составить хорошую компанию.
-3. Я не очень способен к общению в сложных социальных ситуациях. Я предпочитаю сидеть в стороне и наблюдать. От общения с людьми я нервничаю.
-4. Мне трудно доверять незнакомым и новым людям. Ты не знаешь их привычек и поведения; следовательно, ты не знаешь, насколько они опасны.
-5. Вокруг нас опасность, и только глупцы теряют бдительность. Я не дурак, и настороже.
-6. Я считаю, что между рабочим и личным временем должно быть четкое разделение. Я не занимаюсь делами в свое личное время. Если я вам нужен, наймите меня.
+|  К6 | СЛАБОСТЬ                                                                                                                                                |
+| --: | ------------------------------------------------------------------------------------------------------------------------------------------------------- |
+|   1 | Иногда я могу излишне предаваться праздности, но нужно же как-то скоротать время.                                                                       |
+|   2 | Я не могу просто тихо сидеть рядом с кем-то. Мне нужно заполнить тишину разговором, чтобы составить хорошую компанию.                                   |
+|   3 | Я не очень способен к общению в сложных социальных ситуациях. Я предпочитаю сидеть в стороне и наблюдать. От общения с людьми я нервничаю.              |
+|   4 | Мне трудно доверять незнакомым и новым людям. Ты не знаешь их привычек и поведения; следовательно, ты не знаешь, насколько они опасны.                  |
+|   5 | Вокруг нас опасность, и только глупцы теряют бдительность. Я не дурак, и настороже.                                                                     |
+|   6 | Я считаю, что между рабочим и личным временем должно быть четкое разделение. Я не занимаюсь делами в свое личное время. Если я вам нужен, наймите меня. |
 
 Источник: Kobold Press, Tome of Heroes
